# internal/api/types.go
@@ -1,0 +1,6 @@
+package api
+
+type ErrorResponse struct {
+	Status  string `json:"status"`
+	Message string `json:"message"`
+}
